[package]
name = "fuel-core-interfaces"
version = "0.11.2"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "vm"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core"
description = "Fuel core interfaces"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4" }
derive_more = { version = "0.99" }
fuel-vm = { version = "0.18", default-features = false, features = ["random"] }
futures = "0.3"
lazy_static = "1.4"
parking_lot = "0.12"
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"
tokio = { version = "1.21", features = ["full"] }
zeroize = "1.5"

[features]
test-helpers = [
    "fuel-vm/random", "fuel-vm/test-helpers",
]
serde = ["dep:serde", "fuel-vm/serde", "chrono/serde"]
debug = ["fuel-vm/debug"]
