[package]
name = "fuel-core"
version = "0.9.3"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["concurrency", "cryptography::cryptocurrencies", "emulators"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "vm"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core"
description = "Fuel client."

[[bin]]
name = "fuel-core"
path = "src/main.rs"
# Prevent the test suite from running twice (lib + bin targets)
# Bin target doesn't perform any additional testing beyond lib target.
test = false

[dependencies]
anyhow = "1.0"
# This needs to be pinned as newer versions are incompatible with fuel-core.
# We're waiting for the following resolution: https://github.com/FuelLabs/fuel-core/pull/260#issuecomment-1102435692
async-graphql = { version = "4.0", features = [
    "chrono",
    "chrono-tz",
    "tracing",
] }
async-trait = "0.1"
axum = { version = "0.4" }
bincode = "1.3"
byteorder = "1.4.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1", features = ["env", "derive"] }
derive_more = { version = "0.99" }
dirs = "3.0"
env_logger = "0.9"
fuel-block-executor = { path = "../fuel-block-executor", version = "0.9.3" }
fuel-block-importer = { path = "../fuel-block-importer", version = "0.9.3" }
fuel-block-producer = { path = "../fuel-block-producer", version = "0.9.3" }
fuel-core-bft = { path = "../fuel-core-bft", version = "0.9.3" }
fuel-core-interfaces = { path = "../fuel-core-interfaces", version = "0.9.3", features = [
    "serde",
] }
fuel-sync = { path = "../fuel-sync", version = "0.9.3" }
fuel-txpool = { path = "../fuel-txpool", version = "0.9.3" }
futures = "0.3"
graphql-parser = "0.3.0"
hex = { version = "0.4", features = ["serde"] }
hyper = "0.14"
itertools = "0.10"
lazy_static = "1.4"
prometheus = { version = "0.13", optional = true }
rand = "0.8"
rocksdb = { version = "0.17", features = [
    "snappy",
    "multi-threaded-cf",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = "1.11"
strum = "0.21"
strum_macros = "0.21"
tempfile = "3.3"
thiserror = "1.0"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.2.1", features = ["set-header", "trace"] }
tower-layer = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "ansi",
    "env-filter",
    "json",
] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
assert_matches = "1.5"
fuel-core-interfaces = { path = "../fuel-core-interfaces", features = ["serde", "test-helpers"] }
insta = "1.8"

[features]
prometheus = ["dep:prometheus"]
default = ["rocksdb", "prometheus", "debug"]
debug = ["fuel-core-interfaces/debug"]
test-helpers = []
