[package]
name = "fuel-core"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "Fuel client."

[[bin]]
name = "fuel-core"
path = "src/main.rs"
# Prevent the test suite from running twice (lib + bin targets)
# Bin target doesn't perform any additional testing beyond lib target.
test = false

[dependencies]
anyhow = { workspace = true }
async-graphql = { version = "4.0", features = [
    "chrono",
    "chrono-tz",
    "tracing",
], default-features = false }
async-trait = { workspace = true }
axum = { workspace = true }
bincode = { workspace = true }
byteorder = "1.4.3"
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true }
derive_more = { workspace = true }
dirs = "4.0"
enum-iterator = "1.2"
env_logger = "0.9"
fuel-block-executor = { workspace = true }
fuel-block-importer = { workspace = true }
fuel-block-producer = { workspace = true }
fuel-core-bft = { workspace = true }
fuel-core-interfaces = { workspace = true, features = [
    "serde",
] }
fuel-metrics = { workspace = true, optional = true }
fuel-p2p = { workspace = true, optional = true }
fuel-relayer = { workspace = true, optional = true }
fuel-sync = { workspace = true }
fuel-txpool = { workspace = true }
futures = { workspace = true }
hex = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
rocksdb = { version = "0.19", default-features = false, features = [
    "lz4",
    "multi-threaded-cf"
], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
serde_with = "1.11"
strum = "0.24"
strum_macros = "0.24"
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3", features = ["set-header", "trace"] }
tower-layer = "0.3"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = [
    "ansi",
    "env-filter",
    "json",
] }
uuid = { version = "1.1", features = ["v4"] }

[dev-dependencies]
assert_matches = "1.5"
fuel-core-interfaces = { path = "../fuel-core-interfaces", features = [
    "serde",
    "test-helpers",
] }
insta = { workspace = true }

[features]
metrics = ["dep:fuel-metrics"]
default = ["rocksdb", "metrics", "debug"]
debug = ["fuel-core-interfaces/debug"]
relayer = ["dep:fuel-relayer"]
p2p = ["dep:fuel-p2p"]
# features to enable in production, but increase build times
production = ["rocksdb?/jemalloc"]
