[package]
name = "fuel-core"
version = "0.14.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["concurrency", "cryptography::cryptocurrencies", "emulators"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "vm"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core"
description = "Fuel client."

[[bin]]
name = "fuel-core"
path = "src/main.rs"
# Prevent the test suite from running twice (lib + bin targets)
# Bin target doesn't perform any additional testing beyond lib target.
test = false

[dependencies]
anyhow = "1.0"
async-graphql = { version = "4.0", features = ["tracing"], default-features = false }
async-trait = "0.1"
axum = { version = "0.5" }
bech32 = "0.9.0"
bincode = "1.3"
byteorder = "1.4.3"
clap = { version = "3.2", features = ["env", "derive"] }
derive_more = { version = "0.99" }
dirs = "4.0"
enum-iterator = "1.2"
env_logger = "0.9"
fuel-block-executor = { path = "../fuel-block-executor", version = "0.14.0" }
fuel-block-importer = { path = "../fuel-block-importer", version = "0.14.0" }
fuel-block-producer = { path = "../fuel-block-producer", version = "0.14.0" }
fuel-chain-config = { path = "../fuel-chain-config", version = "0.14.0" }
fuel-core-bft = { path = "../fuel-core-bft", version = "0.14.0" }
fuel-core-interfaces = { path = "../fuel-core-interfaces", version = "0.14.0", features = [
    "serde",
] }
fuel-metrics = { path = "../fuel-metrics", version = "0.14.0", optional = true }
fuel-p2p = { path = "../fuel-p2p", version = "0.14.0", optional = true }
fuel-poa-coordinator = { path = "../fuel-poa-coordinator", version = "0.14.0" }
fuel-relayer = { path = "../fuel-relayer", version = "0.14.0", optional = true }
fuel-sync = { path = "../fuel-sync", version = "0.14.0" }
fuel-txpool = { path = "../fuel-txpool", version = "0.14.0" }
futures = "0.3"
hex = { version = "0.4", features = ["serde"] }
itertools = "0.10"
lazy_static = "1.4"
num_cpus = "1.13"
rand = "0.8"
rocksdb = { version = "0.19", default-features = false, features = [
    "lz4",
    "multi-threaded-cf"
], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = "1.11"
strum = "0.24"
strum_macros = "0.24"
tempfile = "3.3"
thiserror = "1.0"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.3", features = ["set-header", "trace"] }
tower-layer = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "ansi",
    "env-filter",
    "json",
] }
url = "2.2"
uuid = { version = "1.1", features = ["v4"] }

[dev-dependencies]
assert_matches = "1.5"
fuel-core-interfaces = { path = "../fuel-core-interfaces", features = [
    "serde",
    "test-helpers",
] }
insta = "1.8"
mockall = "0.11"
test-case = "2.2"

[features]
metrics = ["dep:fuel-metrics"]
default = ["rocksdb", "metrics", "debug"]
debug = ["fuel-core-interfaces/debug"]
relayer = ["dep:fuel-relayer"]
p2p = ["dep:fuel-p2p"]
# features to enable in production, but increase build times
production = ["rocksdb?/jemalloc", "metrics", "relayer"]
