[package]
name = "fuel-indexer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'

[lib]
crate-type = ['cdylib', 'rlib']

[dependencies]
fuel-tx = { git = "ssh://git@github.com/FuelLabs/fuel-tx.git", default-features = false }

[features]
default = ["fuel-tx/serde-types-minimal"]
use-std = ["fuel-tx/serde-types"]
