[package]
name = "fuel-metrics"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "Fuel metrics"

[dependencies]
axum = { workspace = true }
lazy_static = { workspace = true }
prometheus = "0.13"

