[package]
name = "fuel-metrics"
version = "0.15.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "vm"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core"
description = "Fuel metrics"

[dependencies]
axum = "0.5"
lazy_static = "1.4"
once_cell = "1.16"
prometheus-client = "0.18"

