[package]
name = "fuel-p2p"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "Fuel client networking"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
fuel-core-interfaces = { workspace = true, features = ["serde"] }
futures = { workspace = true }
futures-timer = "3.0"
ip_network = "0.4"
libp2p = { version = "0.44", default-features = false, features = [
    "dns-async-std", "gossipsub", "identify", "kad", "mdns", "mplex", "noise",
    "ping", "request-response", "secp256k1", "tcp-async-io", "yamux", "websocket"
] }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = "0.10"
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
ctor = "0.1"
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-appender = "0.2"
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
