[package]
name = "fuel-p2p"
version = "0.11.2"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-p2p", "networking"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core"
description = "Fuel client networking"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
fuel-core-interfaces = { path = "../fuel-core-interfaces", features = ["serde"], version = "0.11.2" }
futures = "0.3"
futures-timer = "3.0"
ip_network = "0.4"
libp2p = { version = "0.49", default-features = false, features = [
    "dns-tokio", "gossipsub", "identify", "kad", "mdns-tokio", "mplex", "noise",
    "ping", "request-response", "secp256k1", "tcp-tokio", "yamux", "websocket"
] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1.21", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
ctor = "0.1"
fuel-core-interfaces = { path = "../fuel-core-interfaces", features = ["serde", "test-helpers"], version = "0.11.2" }
rand = "0.8"
tokio = { version = "1.21", features = ["full"] }
tracing-appender = "0.2"
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
test-helpers = [
    "fuel-core-interfaces/test-helpers",
]