[package]
name = "fuel-p2p"
version = "0.15.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-p2p", "networking"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core"
description = "Fuel client networking"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
fuel-core-interfaces = { path = "../fuel-core-interfaces", features = [
    "serde",
], version = "0.15.0" }
fuel-metrics = { path = "../fuel-metrics", version = "0.15.0" } # TODO make this a feature
futures = "0.3"
futures-timer = "3.0"
ip_network = "0.4"
libp2p = { version = "=0.50.0", default-features = false, features = [
    "dns",
    "gossipsub",
    "identify",
    "kad",
    "macros",
    "mdns",
    "mplex",
    "noise",
    "ping",
    "request-response",
    "secp256k1",
    "tcp",
    "tokio",
    "yamux",
    "websocket",
] }
libp2p-core = "=0.38.0"
libp2p-dns = "=0.38.0"
libp2p-gossipsub = "=0.43.0"
libp2p-identify = "=0.41.0"
libp2p-kad = "=0.42.0"
libp2p-mdns = "=0.42.0"
libp2p-mplex = "=0.38.0"
libp2p-noise = "=0.41.0"
libp2p-ping = "=0.41.0"
libp2p-request-response = "=0.23.0"
libp2p-swarm = "=0.41.1"
libp2p-swarm-derive = "=0.31.0"
libp2p-tcp = "=0.38.0"
libp2p-websocket = "=0.40.0"
libp2p-yamux = "=0.42.0"
prometheus-client = "0.18"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1.21", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
ctor = "0.1"
fuel-core-interfaces = { path = "../fuel-core-interfaces", features = [
    "serde",
    "test-helpers",
], version = "0.15.0" }
rand = "0.8"
tokio = { version = "1.21", features = ["full"] }
tracing-appender = "0.2"
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
test-helpers = ["fuel-core-interfaces/test-helpers"]
