[package]
name = "fuel-relayer"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "Fuel Relayer"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = "1.1"
chrono = { workspace = true }
env_logger = "0.9"
ethers-contract = { version = "0.17", default-features = false, features = [
    "abigen",
] }
ethers-core = { version = "0.17", default-features = false }
ethers-middleware = { version = "0.17", default-features = false }
ethers-providers = { version = "0.17", default-features = false, features = [
    "ws",
    "rustls",
] }
ethers-signers = { version = "0.17", default-features = false }
features = "0.10"
fuel-core-interfaces = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
once_cell = "1.4"
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"]}
tracing = { workspace = true }
tracing-subscriber = "0.3.9"
url = "2.2"

[dev-dependencies]
fuel-core-interfaces = { path = "../fuel-core-interfaces", features = [
    "test-helpers",
] }
rand = "0.8"
tracing-test = "0.2"

[features]
test-helpers = ["fuel-core-interfaces/test-helpers"]

