[package]
name = "fuel-relayer"
version = "0.14.1"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "fuel", "fuel-vm"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core"
description = "Fuel Relayer"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.1"
ethers-contract = { version = "1.0.2", default-features = false, features = [
    "abigen",
] }
ethers-core = { version = "1.0.2", default-features = false }
ethers-providers = { version = "1.0.2", default-features = false, features = [
    "ws",
    "rustls",
] }
fuel-core-interfaces = { path = "../fuel-core-interfaces", package = "fuel-core-interfaces", version = "0.14.1" }
futures = "0.3"
hex = "0.4"
once_cell = "1.4"
parking_lot = "0.12"
serde = "1.0"
serde_json = "1.0"
sha3 = "0.10"
thiserror = "1.0"
tokio = { version = "1.21", features = ["macros"] }
tracing = "0.1"
url = "2.2"

[dev-dependencies]
fuel-core-interfaces = { path = "../fuel-core-interfaces", package = "fuel-core-interfaces", features = [
    "test-helpers",
] }
fuel-relayer = { path = ".", features = ["test-helpers"] }
mockall = "0.11"
rand = "0.8"
test-case = "2.2"
tokio = { version = "1.21", features = ["macros", "test-util"] }
tracing-test = "0.2"

[features]
test-helpers = ["fuel-core-interfaces/test-helpers"]
