[package]
name = "fuel-sync"
version = "0.8.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "fuel", "fuel-vm"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core"
description = "Fuel Synchronizer"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
fuel-core-interfaces = { path = "../fuel-core-interfaces", package = "fuel-core-interfaces", version = "0.8.0" }
fuel-storage = "0.1"
fuel-tx = { version = "0.12", default-features = false }
fuel-types = { version = "0.5", default-features = false }
tokio = { version = "1.14", features = ["full"] }
