[package]
name = "fuel-tests"
version = "0.0.0"
edition = "2021"
license = "BUSL-1.1"
publish = false
# Disable automatic test target discovery. This allows us to run all the integ tests as a single binary target (lib.rs)
# instead of each integ test file being its own compiled & linked binary which is the default behavior. Linking with
# RocksDB is expensive so we want to minimize the amount of work on ld. This is also how other projects like diesel-rs
# structure their integ tests.
autotests = false
autobenches = false

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true

[dependencies]
async-std = "1.12"
chrono = { version = "0.4", features = ["serde"] }
fuel-core = { path = "../fuel-core", features = ["test-helpers"], default-features = false }
fuel-core-interfaces = { path = "../fuel-core-interfaces", features = ["test-helpers"] }
fuel-gql-client = { path = "../fuel-client", features = ["test-helpers"] }
fuel-txpool = { path = "../fuel-txpool" }
futures = "0.3"
insta = "1.8"
itertools = "0.10"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
rstest = { version = "0.13" }
serde_json = "1.0"
tempfile = "3.3"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }

[features]
metrics = ["fuel-core/rocksdb", "fuel-core/metrics"]
default = ["fuel-core/default", "metrics"]
debug = ["fuel-core-interfaces/debug"]
