[package]
name = "fuel-tests"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
# Disable automatic test target discovery. This allows us to run all the integ tests as a single binary target (lib.rs)
# instead of each integ test file being its own compiled & linked binary which is the default behavior. Linking with
# RocksDB is expensive so we want to minimize the amount of work on ld. This is also how other projects like diesel-rs
# structure their integ tests.
autotests = false
autobenches = false

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
fuel-core = { workspace = true, default-features = false }
fuel-core-interfaces = { workspace = true, features = ["test-helpers"] }
fuel-gql-client = { workspace = true, features = ["test-helpers"] }
fuel-txpool = { workspace = true }
futures = { workspace = true }
insta = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
metrics = ["fuel-core/rocksdb", "fuel-core/metrics"]
default = ["fuel-core/default", "metrics"]
debug = ["fuel-core-interfaces/debug"]
