[package]
name = "fuel-txpool"
version = "0.9.3"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "vm"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core"
description = "Transaction pool"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
fuel-core-interfaces = { path = "../fuel-core-interfaces", version = "0.9.3" }
futures = "0.3"
parking_lot = "0.11"
thiserror = "1.0"
tokio = { version = "1.14", default-features = false, features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
fuel-core-interfaces = { path = "../fuel-core-interfaces", version = "0.9.3", features = [
    "test-helpers",
] }
