[package]
name = "fuel-txpool"
version = "0.15.1"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "vm"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core"
description = "Transaction pool"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
fuel-chain-config = { path = "../fuel-chain-config", version = "0.15.1" }
fuel-core-interfaces = { path = "../fuel-core-interfaces", version = "0.15.1" }
fuel-metrics = { path = "../fuel-metrics", version = "0.15.1"}
parking_lot = "0.12"
thiserror = "1.0"
tokio = { version = "1.21", default-features = false, features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
fuel-txpool = { path = ".", features = ["test-helpers"] }

[features]
test-helpers = ["fuel-core-interfaces/test-helpers"]
