[package]
name = "index-runner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dotenv = "0.15.0"
fuel-core = { path = "../fuel-core" }
fuel-indexer = { path = "../fuel-indexer/lib" }
rand = "0.8.4"
serde_json = "1.0.67"
serde_yaml = "0.8.19"
structopt = "0.3.23"
