[package]
name = "fuel-relayer"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
repository = "https://github.com/FuelLabs/fuel-core"
description = "Transaction pool"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
fuel-tx = { version = "0.2", features = ["serde-types"] }
fuel-types = { version = "0.1", features = ["serde-types"] }
futures = "0.3"
hashbrown = "0.12"
interfaces = { path = "../interfaces", package = "fuel-client-interfaces", version = "0.1", features = [
    "test_helpers",
] }
parking_lot = "0.11"
thiserror = "1.0"
env_logger = "0.9"
ethers-contract = { git = "https://github.com/gakonst/ethers-rs.git", package = "ethers-contract", default-features = false }
ethers-core = { git = "https://github.com/gakonst/ethers-rs.git", package = "ethers-core", default-features = false }
ethers-middleware = { git = "https://github.com/gakonst/ethers-rs.git", package = "ethers-middleware", default-features = false }
#futures-util = "^0.3.18"
ethers-providers = { git = "https://github.com/gakonst/ethers-rs.git", package = "ethers-providers", default-features = false, features=["ws","rustls"]}
ethers-solc = { git = "https://github.com/gakonst/ethers-rs.git", package = "ethers-solc", default-features = false }
features = "0.10"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.15", features = ["full"] }


[dev-dependencies]
interfaces = { path = "../interfaces", package = "fuel-client-interfaces", version = "0.1", features = [
    "test_helpers",
] }


[[bin]]
name = "fuel-relayer"
path = "src/main.rs"
