[package]
name = "fuel-core-storage"
version = "0.15.1"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-core", "fuel-client", "fuel-storage"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core"
description = "Storage types and primitives used by Fuel core protocol."

[dependencies]
fuel-core-types = { path = "../types", version = "0.15.1" }
fuel-vm-private = { version = "0.22", package = "fuel-vm"}
