[package]
edition = { workspace = true }
license = { workspace = true }
name = "fuel-core-tests"
publish = false
version = "0.0.0"
# Disable automatic test target discovery. This allows us to run all the integ tests as a single binary target (lib.rs)
# instead of each integ test file being its own compiled & linked binary which is the default behavior. Linking with
# RocksDB is expensive so we want to minimize the amount of work on ld. This is also how other projects like diesel-rs
# structure their integ tests.
autobenches = false
autotests = false

[[test]]
harness = true
name = "integration_tests"
path = "tests/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
aws-config = { version = "1.1.7", features = [
  "behavior-version-latest",
], optional = true }
aws-sdk-kms = { version = "1.37.0", optional = true }
clap = { workspace = true }
cynic = { workspace = true }
ethers = "2"
fuel-core = { path = "../crates/fuel-core", default-features = false, features = [
  "smt",
  "wasm-executor",
  "test-helpers",
] }
fuel-core-benches = { path = "../benches" }
fuel-core-bin = { path = "../bin/fuel-core", features = ["parquet", "p2p"] }
fuel-core-client = { path = "../crates/client", features = ["test-helpers"] }
fuel-core-executor = { workspace = true }
fuel-core-gas-price-service = { path = "../crates/services/gas_price_service" }
fuel-core-p2p = { path = "../crates/services/p2p", features = [
  "test-helpers",
], optional = true }
fuel-core-poa = { path = "../crates/services/consensus_module/poa" }
fuel-core-relayer = { path = "../crates/services/relayer", features = [
  "test-helpers",
], optional = true }
fuel-core-storage = { path = "../crates/storage", features = ["test-helpers"] }
fuel-core-trace = { path = "../crates/trace" }
fuel-core-txpool = { path = "../crates/services/txpool", features = [
  "test-helpers",
] }
fuel-core-types = { path = "../crates/types", features = ["test-helpers"] }
fuel-core-upgradable-executor = { path = "../crates/services/upgradable-executor" }
futures = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true, features = ["server"] }
insta = { workspace = true }
itertools = { workspace = true }
k256 = { version = "0.13.3", features = ["ecdsa-core"] }
primitive-types = { workspace = true, default-features = false }
rand = { workspace = true }
reqwest = { workspace = true }
rstest = "0.15"
serde_json = { workspace = true }
spki = "0.7.3"
tempfile = { workspace = true }
test-case = { workspace = true }
test-helpers = { path = "./test-helpers" }
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "test-util",
] }

[dev-dependencies]
pretty_assertions = "1.4"
proptest = { workspace = true }
tracing = { workspace = true }

[features]
default = ["fuel-core/default", "relayer"]
p2p = ["fuel-core/p2p", "fuel-core-p2p"]
relayer = ["fuel-core/relayer", "fuel-core-relayer"]
wasm-executor = ["fuel-core/wasm-executor"]
aws-kms = ["dep:aws-config", "dep:aws-sdk-kms", "fuel-core-bin/aws-kms"]
