[package]
name = "tx-client"
version = "0.1.0"
authors = ["Victor Lopez <victor.lopez@fuel.sh>"]
edition = "2018"
repository = "https://github.com/FuelLabs/fuel-core"
description = "Tx client and schema specification."

[dependencies]
cynic = { version = "0.14", features = ["surf"] }
fuel-vm = { git = "ssh://git@github.com/FuelLabs/fuel-vm.git", features = ["serde-types"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
surf = "2.2"

[dev-dependencies]
actix-rt = "1.1"
actix-web = "3.3"
fuel-core = { path = "../fuel-core" }

[build-dependencies]
async-graphql = "2.8"
fuel-core = { path = "../fuel-core" }
